--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "engines" : {
-      "node": "8.4.0"
+  "engines": {
+    "node": "8.4.0"
   },
   "author": "Varun",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.4",
+    "node-cron": "^1.2.1",
     "nodemailer": "^4.4.0"
   }
 }
